Better display the number of times feature info found before changing pom.